--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.8.1"
   }
 }
