--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,18 @@
   },
   "extends": "eslint:recommended",
   "rules": {
-    "indent": ["error", 4],
-    "linebreak-style": ["error", "windows"],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"]
+    "indent": [
+      "error",
+      4
+    ],
+    //"linebreak-style": ["error", "windows"],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ]
   }
 }
