hebrew text fix

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONN_STR=mongodb+srv://shayja:shayshay@cluster0.rc68j.mongodb.net/zapdemo_db?retryWrites=true&w=majority
+DB_CONN_STR=mongodb+srv://shayja:shayshay@clusterzapapi.rc68j.gcp.mongodb.net/zapapi_db?retryWrites=true&w=majority
